2010-01-04  Tatsuya BIZENN  <bizenn@kahua.org>

	* Add: tools/create-test-db-and-user.sql, tools/drop-test-db-and-user.sql
	  Change: test/dbd.scm
	  use "kahua_test" user and the same named database for test.
	  So add a preparing script and a cleanup script.

2009-11-20  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd_mysql.c, dbd_mysql.h,
	          dbd/mysql.scm
	  add mysql-hex-string but not yet tests.

2009-11-19  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd/mysql.scm
	  add mysql-use-result, mysql-get-ssl-cipher, mysql-ssl-set,
	  but not yet tests.

2009-11-18  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd_mysql.c, mysql_mysql.h,
	          dbd/mysql.scm, test/dbd.scm
	  add mysql-fetch-lengths, mysql-field-seek and mysql-field-tell.
	  add <mysql-row-offset>, mysql-row-seek and mysql-row-tell.

2009-11-17  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd_mysql.c, dbd_mysql.h, dbd/mysql.scm
	  add mysql-fetch-fields.

	* Change: test/dbd.scm
	  clean up code.

2009-11-16  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: dbd_mysqllib.stub, dbd/mysql.scm, test/dbd.scm
	  add mysql-fetch-field.

2009-11-10  Tatsuya BIZENN  <bizenn@kahua.org>

	* Change: configure.ac
	  add --with-mysql-config command line switch.

2007-04-17  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd_mysql.c
	  Now load default configurations from my.cnf file.

2007-03-23  Tatsuya BIZENN  <bizenn@arthub.net>

	* Rename: config.h to acconfig.h
	  Because of confliction to MySQL's config.h(maybe 5.0 or later).

2007-02-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Rename: configure.in -> configure.ac

	* Change: dbd/mysql.scm, dbd_mysqllib.stub, dbd_mysql.c, dbd_mysql.h
	  Add <mysql-time> class.  Now we can use <mysql-time> instance as
	  parameter or field value of prepared statements.

2007-02-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: dbd/mysql.scm, dbd_mysqllib.stub, dbd_mysql.h